Try to fix world map width on mobile screens

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,3 +52,8 @@
 .dark .worldmap__figure-container path {
     stroke: white !important;
 }
+@media (max-width: 480px) {
+    .worldmap__figure-container svg {
+        max-width: 336px;
+    }
+}
